# Nibbler

./: CMakeLists.txt  GUI_sdl.dylib  Makefile  nibbler  sdlDynamicLibrary.sh
allegro/: CHANGES-5.2.txt  allegro.mft
allegro/docs/html/refman/: acodec.html  audio.html  color.html  config.html  direct3d.html  display.html  events.html  file.html  fixed.html  font.html  fshook.html  fullscreen_mode.html  getting_started.html  graphics.html  haptic.html  image.html  index.html  index_all.html  joystick.html  keyboard.html  main.html  memfile.html  memory.html  misc.html  monitor.html  mouse.html  native_dialog.html  opengl.html  path.html  physfs.html  platform.html  primitives.html  shader.html  state.html  system.html  threads.html  time.html  timer.html  touch.html  transformations.html  (+2 more)
allegro/docs/man/: ALLEGRO_EVENT.3  ALLEGRO_PRIM_ATTR.3  al_attach_shader_source.3  al_flip_display.3  al_orthographic_transform.3  al_perspective_transform.3  al_transform_coordinates_3d_projective.3  al_use_projection_transform.3
inc/: GUI.hpp  GUI1.hpp  GUI_sdl.hpp  Game.hpp  IGUI.hpp  Object.hpp  Position.hpp  Snake.hpp
src/: GUI.cpp  GUI_sdl.cpp  Game.cpp  Object.cpp  Position.cpp  Snake.cpp  main.cpp
